smaller images, soft hyphens in more places, removed empty image gallery from Landahl and fixed some spacings

--- a/src/styles/cases.css.styl
+++ b/src/styles/cases.css.styl
@@ -159,8 +159,6 @@
     .team,
     .relatedServices,
     .twitter
-      margin-top 40px
-      padding 40px 0
       position relative
 
       li
@@ -194,7 +192,7 @@
         width 200px
 
     .gallery
-      padding-top 40px
+      margin 40px 0
       position relative
       width 100%
 
@@ -211,8 +209,6 @@
             margin-right 0
 
     .relatedServices
-      padding 40px 0 0
-
       .title
         width 200px
 
